# orangepi5_ncc_visual_tracker

./: CMakeLists.txt  README.md
include/: opencl_utils.h  tracker.h
kernels/: tracker_kernels.cl
src/: main.cpp  opencl_utils.cpp  tracker.cpp
